--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.css
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.css
@@ -1,3 +1,8 @@
 textarea{
   resize: none;
 }
+.switcher {
+  padding: 0px !important;
+  position: relative !important;
+  display: inline-block !important;
+}
