[upd] nowrap a iconos listar comproabntes

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -35,10 +35,9 @@
                   style="font-size:15px"></em> </a>
             </div>
           </td>
-          <td class="align-middle">
-            <em style="font-size:15px" class="far fa-file-alt btn m-2" (click)="showModal(item)"></em>
-            &nbsp;
-            <em title="Anexos" style="font-size:15px" class="fas fa-folder-open btn m-2"
+          <td class="align-middle no-wraptext ">
+            <em style="font-size:15px" class="far fa-file-alt btn  mx-1" (click)="showModal(item)"></em>
+            <em title="Anexos" style="font-size:15px" class="fas fa-folder-open btn mx-1"
               (click)="abrirModalAgregarAnexos(item)"></em>
           </td>
           <td class="align-middle">
