ajustes de flujo completo

--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -73,7 +73,7 @@
   </div>
 
   <div class="row mt-2 mb-2">
-    <div class="col text-right">
+    <div class="col-md-12 text-right">
       <button class="btn btn-danger mr-2 " (click)="onCancelar.emit()"> Cancelar</button>
       <button [disabled]="!main_formulario.valid" class="btn btn-primary" (click)="submitFormulario()">
         Agregar </button>
