--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
@@ -31,7 +31,7 @@
                     </select2>
                   </div>
 
-                  <ng-container *ngIf="usuario.asistente && asistente_vista">
+                  <!-- <ng-container *ngIf="usuario.asistente && asistente_vista">
                     <div class="col-md-3 mt-2">
                       <label for="selec_asistido_usuario">Asistiendo a... </label>
                       <select2 [data]="lista_asistido" [options]="{placeholder: 'Seleccione Usuario Asistido'}"
@@ -39,7 +39,7 @@
                         id="selec_asistido_usuario_solicitudes">
                       </select2>
                     </div>
-                  </ng-container>
+                  </ng-container> -->
 
                   <div *ngIf="is_flujo_aprobacion" class="col-md-3 mt-2">
                     <label for="empleado_supl">Usuario</label>
