--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.css
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.css
@@ -6,3 +6,16 @@
   max-height: 40vh;
   overflow-y: auto;
 }
+
+.card-body-comprobacion {
+  flex: 1 1 auto;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  padding: 1.25rem;
+  padding-top: 1.25rem;
+  padding-right: 0rem;
+  padding-bottom: 1.25rem;
+  padding-left: 1.25rem;
+}
+
