--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -52,7 +52,7 @@
 
   <div class="col-md-3">
     <div class="card text-center">
-      <div class="card-body">
+      <div class="card-body-comprobacion">
         <table class="table">
           <caption></caption>
           <thead>
