--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.css
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.css
@@ -4,5 +4,17 @@
 
 .ajustar {
   /* word-break: break-all; */
+  width: 150px !important;
   max-width: 150px !important;
+}
+
+.ajustar_nota {
+  /* word-break: break-all; */
+  width: 200px !important;
+  max-width: 200px !important;
+}
+
+.ajustar_ta {
+  width: 100px !important;
+  max-width: 100px !important;
 }
