[add] ajuste de cabecera de la lista GV

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -23,7 +23,7 @@
           <thead>
             <tr>
               <th scope="">Compañía</th>
-              <th scope="" class="ajustar_ta">Folio Comprobación</th>
+              <th scope="">Folio Comprobación</th>
               <th scope="">Fecha de envío</th>
               <th scope="">Empleado</th>
               <th scope="">Centro de Costo</th>
@@ -31,7 +31,7 @@
               <th scope="">Motivo</th>
               <th scope="">Destino</th>
               <th scope="">Moneda</th>
-              <th scope="" class="ajustar_ta">Total Reembolso</th>
+              <th scope="">Total Reembolso</th>
               <th scope="">Jefe Inmediato</th>
               <th scope="">Estatus</th>
               <th scope="">Acciónes </th>
