--- a/src/app/modulos/usuarios/formulario-usuario-rci/formulario-usuario-rci.component.html
+++ b/src/app/modulos/usuarios/formulario-usuario-rci/formulario-usuario-rci.component.html
@@ -121,6 +121,15 @@
                 </ng-select>
               </div>
 
+              <div class="form-group col-md-3">
+                <label for="rol"> Monto Caja Chica <span class="fas fa-info-circle" data-toggle="tooltip"
+                    data-placement="top" title="Seleccione solo si el usuario tiene un limite de gastos en caja chica."
+                    title="Seleccione solo si el usuario tiene un limite de gastos en caja chica."></span> </label>
+                <select2 [data]="lista_montos_gastos_viaje" [options]="{placeholder: 'Seleccione Monto Caja Chica...'}"
+                  name="monto_caja_chica" id="monto_caja_chica" (valueChanged)="onMontoChange($event)">
+                </select2>
+              </div>
+
             </div>
             <legend style="font-size:1rem">Asignación Saldos</legend>
             <div class="form-row form-group row">
