ajustes de llamada con Huicochea

--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -111,7 +111,7 @@
   </fieldset>
 
   <div class="row">
-    <div class="col  text-right ">
+    <div class="col-md-12  text-right ">
       <button *ngIf="!numero_comprobacion" type="button" (click)="cancelarComprobacion()"
         class="btn btn-danger ml-auto mr-2">Cancelar</button>
       <button
