--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -7,10 +7,9 @@
         <h4 class="panel-title">Lista de Comprobaciones</h4>
       </div>
       <div class="panel-body  table-responsive">
-        <table #datatableElement id="tabla_comprobaciones" datatable [dtOptions]="globals.dtOptions"
-          [dtTrigger]="dtTrigger"
+        <table #datatableElement id="tabla_comprobaciones" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
           class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody w-100"
-          style="width: 100%  !important; max-width: 100% !important;">
+          style="max-width: 100% !important; width: 100% !important;">
           <caption></caption>
           <thead>
             <tr>
@@ -31,12 +30,20 @@
           <tbody>
             <tr class="gradeU" *ngFor="let item of lista_comprobantes">
               <td>{{ item.estatus}}</td>
-              <td>{{ item.folio_comprobacion}}</td>
+              <td class="ajustar_ta">{{ item.folio_comprobacion}}</td>
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.descripcion}}</td>
               <td>{{ item.motivo}}</td>
-              <td>{{ item.fecha_creacion}}</td>
-              <td>{{ item.monto_reembolsar}}</td>
+              <td>
+                <div style="text-align: right;">
+                  {{ item.fecha_creacion | date: 'yyyy-MM-dd'}}
+                </div>
+              </td>
+              <td>
+                <div style="text-align: right;">
+                  {{ item.monto_reembolsar | currency: '$'}}
+                </div>
+              </td>
               <td>{{ item.nombre_moneda}}</td>
               <td>{{ item.nombre_cc}}</td>
               <td>{{ item.nombre_compania}}</td>
