--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.css
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.css
@@ -19,3 +19,12 @@
   padding-left: 1.25rem;
 }
 
+.font-weight-bold {
+  font-weight: 700!important;
+  font-size: 12px !important;
+  text-align: left;
+}
+.header-align {
+  text-align: left;
+}
+
