--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -55,17 +55,25 @@
         <table class="table">
           <caption></caption>
           <thead>
-            <th scope=""> Folio Comprobación</th>
+            <th scope="" class="header-align"> Folio Comprobación</th>
             <th scope=""> {{ numero_comprobacion }}</th>
           </thead>
           <tbody>
             <tr>
               <td class="font-weight-bold">Total gastado</td>
-              <td> {{ (totales ? totales.total_gastado : '') | currency: '$' }} </td>
+              <td>
+                <div style="text-align: right;">
+                  {{ (totales ? totales.total_gastado : '') | currency: '$' }}
+                </div>
+              </td>
             </tr>
             <tr>
               <td class="font-weight-bold">Monto reembolsable</td>
-              <td> {{ (totales ? totales.monto_reembolsable : '') | currency: '$' }} </td>
+              <td>
+                <div style="text-align: right;">
+                  {{ (totales ? totales.monto_reembolsable : '') | currency: '$' }}
+                </div>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -73,12 +81,12 @@
           <div class="col-md-12 ">
             <button class="btn btn-warning m-2" (click)="onCancelar.emit()">
               Regresar</button>
-            <button *ngIf="comprobante.estatus.toLowerCase() =='borrador' " class="btn btn-danger m-2"
-              (click)="onEliminarComprobacion.emit()">
-              Eliminar Comprobación</button>
             <button *ngIf="comprobante.estatus.toLowerCase() =='borrador' " #btn_enviar class="btn btn-primary m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="enviarComprobacion(btn_enviar)"> Comprobar</button>
+            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-primary m-2"
+              [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
+              (click)="aprobarComprobacion(btn_enviar)"> Aprobar </button>
             <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-danger m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="rechazarComprobacion(btn_enviar)"> Rechazar </button>
@@ -86,9 +94,9 @@
               #btn_enviar class="btn btn-danger m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="solicitarCambiosComprobacion(btn_enviar)"> Solicitar Cambios </button>
-            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-primary m-2"
-              [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
-              (click)="aprobarComprobacion(btn_enviar)"> Aprobar </button>
+            <button *ngIf="comprobante.estatus.toLowerCase() =='borrador' " class="btn btn-danger m-2"
+              (click)="onEliminarComprobacion.emit()">
+              Eliminar Comprobación</button>
           </div>
         </div>
       </div>
