--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -116,8 +116,8 @@
         class="btn btn-danger ml-auto mr-2">Cancelar</button>
       <button
         *ngIf="header_comprobante!.estatus!.toLowerCase() == 'borrador' || !header_comprobante.estatus || (datos_aprobacion && datos_aprobacion.nivel_aproacion == 2)"
-        [disabled]="(!formulario_header.valid || numero_comprobacion) &&  !header_comprobante.id" type="submit"
-        class="btn btn-primary ml-auto">{{ numero_comprobacion? "Actualizar" : "Continuar"}}</button>
+        type="submit" class="btn btn-primary ml-auto">{{ numero_comprobacion? "Actualizar" : "Continuar"}}</button>
+      <!-- [disabled]="(!formulario_header.valid || numero_comprobacion) &&  !header_comprobante.id" -->
     </div>
   </div>
 
