--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -23,7 +23,7 @@
           <thead>
             <tr>
               <th scope="">Compañía</th>
-              <th scope="">Folio Comprobación</th>
+              <th scope="">Folio <br> Comprobación</th>
               <th scope="">Fecha de envío</th>
               <th scope="">Empleado</th>
               <th scope="">Centro de Costo</th>
