ajuste de lista centrarcabecera text

--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -13,17 +13,17 @@
           <caption></caption>
           <thead>
             <tr>
-              <th scope="">Estatus</th>
-              <th scope="">Folio <br> Comprobación</th>
-              <th scope="">Usuario</th>
-              <th scope="">Destino</th>
-              <th scope="">Motivo</th>
-              <th scope="">Fecha Creación</th>
-              <th scope="">Monto <br> Reembolsar</th>
-              <th scope="">Moneda</th>
-              <th scope="">Centro Costo</th>
-              <th scope="">Compañía</th>
-              <th scope="">Acciónes </th>
+              <th scope="" class="text-center">Estatus</th>
+              <th scope="" class="text-center">Folio <br> Comprobación</th>
+              <th scope="" class="text-center">Usuario</th>
+              <th scope="" class="text-center">Destino</th>
+              <th scope="" class="text-center">Motivo</th>
+              <th scope="" class="text-center">Fecha Creación</th>
+              <th scope="" class="text-center">Monto <br> Reembolsar</th>
+              <th scope="" class="text-center">Moneda</th>
+              <th scope="" class="text-center">Centro Costo</th>
+              <th scope="" class="text-center">Compañía</th>
+              <th scope="" class="text-center">Acciónes </th>
             </tr>
           </thead>
 
