--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -22,19 +22,19 @@
           <caption></caption>
           <thead>
             <tr>
-              <th scope="">Compañía</th>
-              <th scope="">Folio <br> Comprobación</th>
-              <th scope="">Fecha de envío</th>
-              <th scope="">Empleado</th>
-              <th scope="">Centro de Costo</th>
-              <th scope="">Cliente</th>
-              <th scope="">Motivo</th>
-              <th scope="">Destino</th>
-              <th scope="">Moneda</th>
-              <th scope="">Total Reembolso</th>
-              <th scope="">Jefe Inmediato</th>
-              <th scope="">Estatus</th>
-              <th scope="">Acciónes </th>
+              <th scope="" class="text-center">Compañía</th>
+              <th scope="" class="text-center">Folio <br> Comprobación</th>
+              <th scope="" class="text-center">Fecha de envío</th>
+              <th scope="" class="text-center">Empleado</th>
+              <th scope="" class="text-center">Centro de Costo</th>
+              <th scope="" class="text-center">Cliente</th>
+              <th scope="" class="text-center">Motivo</th>
+              <th scope="" class="text-center">Destino</th>
+              <th scope="" class="text-center">Moneda</th>
+              <th scope="" class="text-center">Total Reembolso</th>
+              <th scope="" class="text-center">Jefe Inmediato</th>
+              <th scope="" class="text-center">Estatus</th>
+              <th scope="" class="text-center">Acciónes </th>
             </tr>
           </thead>
 
