ajuste de lista comprementos GV boton editar y ajuste de vista hederform vista de autorizado

--- a/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
+++ b/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
@@ -16,7 +16,7 @@
                 <th scope=""> Estatus</th>
                 <th scope=""> Fecha</th>
                 <th scope=""> Forma de Pago</th>
-                <th scope=""> Razon social</th>
+                <th scope=""> Razón social</th>
                 <th scope=""> Moneda</th>
                 <th scope=""> Monto Reembolsar</th>
               </tr>
