--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -58,11 +58,11 @@
         </select2>
       </div>
 
-      <!-- <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 mt-2" style="display: none;">
         <label for="tipo_cambio">Tipo Cambio<span class="requerido">*</span></label>
         <input currencyMask type="text" formControlName="tipo_cambio" maxlength="10" [readOnly]='numero_comprobacion'
           [(ngModel)]="header_comprobante.tipo_cambio" class="form-control" id="tipo_cambio">
-      </div> -->
+      </div>
 
       <div *ngIf="title === 'Gastos de Viaje'" class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <div *ngIf="comprobacion_header.estatus !== 'Autorizado'" class="form-group">
@@ -104,28 +104,27 @@
             [(ngModel)]="header_comprobante.recuperable" id="activo" name="activo" />
           <label for="activo">Recuperable</label>
         </div>
-      </div>
 
-    </div>
-    <div class="form-row">
-
-      <div *ngIf="recuperable_nota === 1" class="col-lg-3 col-md-4 col-sm-6 mt-2">
-        <div *ngIf="comprobacion_header.estatus !== 'Autorizado'" class="form-group">
-          <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
-          <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
-            rows="3" [(ngModel)]="header_comprobante.nota_recuperable"
-            [readOnly]='(header_comprobante.estatus_id === 9 ? true : false) && (datos_aprobacion && datos_aprobacion.nivel_aproacion != 2) '>
-          </textarea>
-        </div>
-        <div *ngIf="comprobacion_header.estatus === 'Autorizado'" class="form-group">
-          <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
-          <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
-            rows="3" [(ngModel)]="header_comprobante.nota_recuperable" disabled>
-          </textarea>
+        <div *ngIf="recuperable_nota === 1" class="mt-2">
+          <div *ngIf="comprobacion_header.estatus !== 'Autorizado'" class="form-group">
+            <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
+            <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
+              rows="3" [(ngModel)]="header_comprobante.nota_recuperable"
+              [readOnly]='(header_comprobante.estatus_id === 9 ? true : false) && (datos_aprobacion && datos_aprobacion.nivel_aproacion != 2) '>
+            </textarea>
+          </div>
+          <div *ngIf="comprobacion_header.estatus === 'Autorizado'" class="form-group">
+            <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
+            <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
+              rows="3" [(ngModel)]="header_comprobante.nota_recuperable" disabled>
+            </textarea>
+          </div>
         </div>
       </div>
 
     </div>
+    <!-- <div class="form-row">
+    </div> -->
 
   </fieldset>
 
