[fix] varios estilos y textos

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -109,7 +109,7 @@
             </div>
 
             <div class="col-md-3 col-sm-4 col-xs-12">
-              <label for="observaciones">Observaciones <span class="requerido">*</span> </label>
+              <label for="observaciones">Observaciones </label>
               <textarea class="form-control" maxlength="500" name="observaciones" id="observaciones" rows="3"
                 [(ngModel)]="comprobante.observaciones"></textarea>
             </div>
