--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -94,32 +94,43 @@
       </div>
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-        <div class="switcher" *ngIf="header_comprobante.estatus_id === 9">
-          <input (click)="notaRecuperable($event.target)" type="checkbox" formControlName="recuperable"
-            [(ngModel)]="header_comprobante.recuperable" id="activo" name="activo" disabled />
-          <label for="activo">Recuperable</label>
-        </div>
-        <div class="switcher" *ngIf="header_comprobante.estatus_id !== 9">
-          <input (click)="notaRecuperable($event.target)" type="checkbox" formControlName="recuperable"
-            [(ngModel)]="header_comprobante.recuperable" id="activo" name="activo" />
-          <label for="activo">Recuperable</label>
-        </div>
 
-        <div *ngIf="recuperable_nota === 1" class="mt-2">
-          <div *ngIf="comprobacion_header.estatus !== 'Autorizado'" class="form-group">
-            <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
-            <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
-              rows="3" [(ngModel)]="header_comprobante.nota_recuperable"
-              [readOnly]='(header_comprobante.estatus_id === 9 ? true : false) && (datos_aprobacion && datos_aprobacion.nivel_aproacion != 2) '>
-            </textarea>
+        <ng-container
+          *ngIf="header_comprobante.estatus.toLowerCase() == 'borrador' || (datos_aprobacion && datos_aprobacion.nivel_aproacion == 2); else elseTemplate">
+          <div class="switcher">
+            <input (click)="notaRecuperable($event.target)" type="checkbox" formControlName="recuperable"
+              [(ngModel)]="header_comprobante.recuperable" id="activo" name="activo" />
+            <label for="activo">Recuperable</label>
           </div>
-          <div *ngIf="comprobacion_header.estatus === 'Autorizado'" class="form-group">
-            <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
-            <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
-              rows="3" [(ngModel)]="header_comprobante.nota_recuperable" disabled>
+          <div *ngIf="recuperable_nota" class="mt-2">
+            <div class="form-group">
+              <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
+              <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
+                rows="3" [(ngModel)]="header_comprobante.nota_recuperable">
+
+
             </textarea>
+            </div>
           </div>
-        </div>
+        </ng-container>
+
+        <ng-template #elseTemplate>
+          <div class="switcher">
+            <input (click)="notaRecuperable($event.target)" type="checkbox" formControlName="recuperable"
+              [(ngModel)]="header_comprobante.recuperable" id="activo" name="activo" readonly disabled />
+            <label for="activo">Recuperable</label>
+          </div>
+          <div class="mt-2">
+            <div class="form-group">
+              <label for="nota_recuperable">Cliente<span class="requerido">*</span></label>
+              <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
+                rows="3" [(ngModel)]="header_comprobante.nota_recuperable" readOnly>
+            </textarea>
+            </div>
+          </div>
+
+        </ng-template>
+
       </div>
 
     </div>
