--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -80,7 +80,7 @@
         formControlName="numero_dias" placeholder="Número Comprobante">
     </div> -->
 
-    <div class="col-md-3 col-sm-4 col-xs-12">
+    <div *ngIf="controles.uuid.value" class="col-md-3 col-sm-4 col-xs-12">
       <button class="btn btn-primary" (click)="abrirModalAgregarAnexos()"> Anexos </button>
     </div>
   </div>
@@ -182,5 +182,6 @@
 </div>
 
 
-<app-modal-agregar-anexo [uuid]="controles.uuid.value" [identificador_corporativo]="usuario.identificador_corporativo">
+<app-modal-agregar-anexo (onListarAnexo)="setCountAnexos($event)" [uuid]="controles.uuid.value"
+  [identificador_corporativo]="usuario.identificador_corporativo">
 </app-modal-agregar-anexo>
