--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -58,9 +58,9 @@
                 </div>
               </td>
 
-              <td class='ajustar_nota'>{{ item.motivo}}</td>
+              <td class='ajustar_nota'> <span [title]="item.motivo"> {{ item.motivo.substring(0, 100) }} </span></td>
 
-              <td>{{ item.descripcion}}</td>
+              <td> <span [title]="item.motivo"> {{ item.descripcion.substring(0, 100)}} </span> </td>
               <td>{{ item.nombre_moneda}}</td>
               <td>
                 <div style="text-align: right;">
@@ -83,9 +83,8 @@
                     <em class="far fa-trash-alt"> </em> Borrar
                   </a>
                   <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.folio_comprobacion)">
-                    <span *ngIf="item.nivel_aprobacion !== ''"> {{item.estatus_id === 9 && item.nivel_aprobacion === ''
-                      ? "Consultar" : "Editar" }} </span>
-                    <span *ngIf="item.nivel_aprobacion === ''">Consultar</span>
+                    {{item.estatus.toLowerCase() === 'borrador' && item.nivel_aprobacion == "" ? "Editar" : "Consultar"
+                    }}
                   </button>
                 </div>
               </td>
