--- a/src/app/modulos/tipo-gasto/list-rerlaciones-rci/list-rerlaciones-rci.component.html
+++ b/src/app/modulos/tipo-gasto/list-rerlaciones-rci/list-rerlaciones-rci.component.html
@@ -25,7 +25,7 @@
               <th>Nombre</th>
               <th>Frecuencia Fiscal</th>
               <th>Monto Deducible</th>
-              <th class="centrado">Editar</th>
+              <th class="centrado">Acción</th>
             </tr>
           </thead>
           <tbody>
@@ -34,6 +34,8 @@
               <td>{{item.frecuencia_fiscal}}</td>
               <td>{{item.valor_nacional | currency: 'MXN' : 'symbol-narrow' : '2.2-2' }}</td>
               <td class="centrado" style="text-align: center !important;">
+                <a class="btn btn-danger mx-2 text-white editar-sucursal"
+                  (click)="eliminarRelacionTipoGasto(item.id)">Eliminar</a>
                 <a class="btn btn-primary text-white editar-sucursal"
                   (click)="editarRelacionTipoGasto(item.id)">Editar</a>
               </td>
